objects/Bank_analysis_txn__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Gambling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Gambling</label>
        <referenceTo>Bank_Gambling__c</referenceTo>
        <relationshipLabel>Bank analysis txn</relationshipLabel>
        <relationshipName>Bank_analysis_txn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Income__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Income</label>
        <referenceTo>Bank_Income__c</referenceTo>
        <relationshipLabel>Bank analysis txn</relationshipLabel>
        <relationshipName>Bank_analysis_txn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Other_Debits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Other Debits</label>
        <referenceTo>Bank_Other_Debits__c</referenceTo>
        <relationshipLabel>Bank analysis txn</relationshipLabel>
        <relationshipName>Bank_analysis_txn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefits</label>
        <referenceTo>Bank_Benefits__c</referenceTo>
        <relationshipName>analysis_common</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loans__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loans</label>
        <referenceTo>Bank_Loans__c</referenceTo>
        <relationshipName>analysis_common</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rent</label>
        <referenceTo>Bank_Rent__c</referenceTo>
        <relationshipName>analysis_common</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dishonours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>dishonours</label>
        <referenceTo>Bank_Dishonours__c</referenceTo>
        <relationshipName>analysis_common</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>firstTransaction__c</fullName>
        <label>firstTransaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastTransaction__c</fullName>
        <label>lastTransaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxValue__c</fullName>
        <label>maxValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minValue__c</fullName>
        <label>minValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>monthAvg__c</fullName>
        <label>monthAvg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>periodIsRegular__c</fullName>
        <label>periodIsRegular</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>period__c</fullName>
        <label>period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalValue__c</fullName>
        <label>totalValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionCount__c</fullName>
        <label>transactionCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank analysis txn</label>
    <nameField>
        <label>analysis_common</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank analysis txn</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>